--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,16 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
+    //Compose Dependency
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
+    //Coil
+    implementation "io.coil-kt:coil-compose:1.4.0"
+
+    //WorkManager with Coroutines
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
 }
